# surrealdb.py

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MANIFEST.in  MIGRATION_STEP_BY_STEP.md  Makefile  PYDANTIC_INTEGRATION_GUIDE.md  README.md  basic_async_example.py  del-requirements.txt  dev_requirements.txt  docker-compose.yml  flake8_config  get_latest_version.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py
.cargo/: config
.cursor/: tooling.mdc
.devcontainer/: devcontainer.json  setup.sh  welcome.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/actions/: action.yml
.github/workflows/: build.yml  ci.yml  cross_build.yml  release-comment.yml  ruff.yml  stability.yml  stash.txt  stash_four.txt  stash_three.txt  tests.yml  unit_tests.yml
builder_code/: maturin_build_sdist.py  maturin_build_wheel.py
docs/: README.md  ReadMe.md  http_client_example.py
embedded/: Cargo.toml  pyproject.toml
embedded/src/surrealdb_embedded/: __init__.py  _ext.pyi
embedded/src/surrealdb_ext/: async_db.rs  lib.rs  sync_db.rs
examples/: .gitignore  README.md  basic_async_example.py  basic_example.py  http_client_example.py  notebook_example.ipynb  websocket_client_example.py
examples/async/: basic_auth_example.py  basic_example.py  basic_insert_and_retrieve.py  basic_query_example.py  basic_upsert_example.py
examples/django/: .env.example  README.md  config.py  database.py  manage.py  pyproject.toml  requirements.txt
examples/django/api/: __init__.py  apps.py  serializers.py  urls.py  views.py
examples/django/surrealdb_example/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
examples/embedded/: README.md  basic_async.py  basic_sync.py  persistence.py
examples/fastapi/: README.md  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
examples/fastapi/routes/: __init__.py  auth.py  users.py  websocket.py
examples/fastmcp/: README.md  config.py  database.py  docker-compose.yml  pyproject.toml  requirements.txt  resources.py  server.py  tools.py
examples/flask/: .env.example  README.md  app.py  database.py  pyproject.toml  requirements.txt
examples/flask/routes/: __init__.py  auth.py  users.py
examples/graphql/: README.md  database.py  dataloaders.py  main.py  pyproject.toml  requirements.txt
examples/jupyter/: README.md  config.py  database.py  pyproject.toml  requirements.txt  utils.py
examples/jupyter/notebooks/: 01_getting_started.ipynb  02_crud_operations.ipynb  03_queries_filtering.ipynb  04_data_analysis.ipynb  05_visualization.ipynb  06_live_queries.ipynb
examples/litestar/: README.md  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
examples/litestar/controllers/: __init__.py  auth.py  users.py  websocket.py
examples/logfire/: .env.example  README.md  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
examples/pydantic/: pydantic.py
examples/quart/: .env.example  README.md  app.py  config.py  database.py  pyproject.toml  requirements.txt
examples/quart/routes/: __init__.py  auth.py  users.py  websocket.py
examples/sanic/: README.md  app.py  config.py  database.py  pyproject.toml  requirements.txt
examples/sanic/blueprints/: __init__.py  auth.py  users.py  websocket.py
examples/starlette/: .env.example  README.md  app.py  config.py  database.py  pyproject.toml  requirements.txt
examples/starlette/routes/: auth.py  users.py  websocket.py
examples/sync/: basic_auth_example.py  basic_example.py  basic_insert_and_retrieve.py  basic_query_example.py  basic_upsert_example.py
integration_tests/: README.md  flask_test.postman_collection.json  package.json
integration_tests/flask/: docker-compose.yml
python/surrealdb/: __init__.py  async_connection_interface.py  asyncio_runtime.py  connection_interface.py  errors.py
python_package/: .editorconfig  .pre-commit-config.yaml  README.md  SECURITY.md  pyproject.toml
python_package/examples/: basic_example.py  notebook_example.ipynb
python_package/surrealdb/: __init__.py  exceptions.py  http.py  ws.py
scripts/: build.sh  checks.sh  download_snapshots.sh  full_test_runner.sh  prime_server_tests.sh  run_binary.sh  run_full_server_test.sh  run_full_test.sh  run_stability_check.sh  run_tests.sh  run_tests_with_coverage.sh  run_unit_tests.sh  start_container.sh  term.sh  test-versions.sh  tests.sh
server_tests/: Cargo  flask_test.postman_collection.json
server_tests/flask/: docker-compose.yml  run_flask_server.sh
src/: README.md  connection.rs  docker_engine.rs  lib.rs  python.rs  routing.rs  runtime.rs  test_url.rs
src/connection/: core.rs  interface.rs  mod.rs  python.rs  state.rs
src/operations/: create.rs  mod.rs
src/routing/: enums.rs  handle.rs  mod.rs  traits.rs
src/surrealdb/: __init__.py  _surrealdb_ext.py  _surrealdb_ext.pyi  errors.py  schema.py  types.py
src/surrealdb_ext/: README.md  async_db.rs  lib.rs  sync_db.rs
surreal/: __init__.py  client.py  errors.py  http.py  utils.py
surrealdb/: Client.py  VERSION.txt  __init__.py  async_connection_interface.py  async_surrealdb.py  asyncio_runtime.py  background_process.py  client.py  common.py  connection.py  connection_clib.py  connection_factory.py  connection_http.py  connection_interface.py  connection_rustlib.py  connection_ws.py  constants.py  docker-compose.yml  errors.py  http.py  requirements.txt  surrealdb.py  test.py  utils.py  ws.py
surrealdb/async_execution_mixins/: auth.py  create.py  query.py  set.py  update.py
surrealdb/clients/: __init__.py  asynchronous.py  http.py  synchronous.py  ws.py
surrealdb/common/: __init__.py  exceptions.py  id.py  json.py
surrealdb/connection/: connection.py  constants.py  factory.py  http.py  ws.py
surrealdb/data/: __init__.py  (+2 more)
tests/: README.md  __init__.py  build.py  python_info.py
unit_tests/: rust_interface_mock.py  test_connection_interface.py
(+334 files in other folders)
