[package]
name = "surrealdb"
version = "0.1.0"
authors = ["Maxwell Flitton <maxwellflitton@gmail.com>"]
edition = "2018"

[dependencies]
surrealdb = { version = "1.5.4",  features = ["protocol-ws", "protocol-http", "kv-mem"] }
serde = "1.0.210"
futures = { version = "0.3.30", features = ["executor"] }
once_cell = "1.19.0"
serde_json = "1.0.128"
crossbeam-channel = "0.5.13"
thiserror = "1.0.63"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
bollard = "*"
futures-util-preview = "0.2.2"
lazy_static = "1.5.0"

[lib]
name = "rust_surrealdb"
crate-type=["cdylib"]

[dependencies.pyo3]
version = "0.20.0"
features = ["extension-module"]

[dependencies.pyo3-asyncio]
version = "0.20"
features = ["unstable-streams", "attributes", "tokio-runtime"]

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
