[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surrealdb"
version = "3.0.0-alpha.1"
description = "SurrealDB python client"
readme = "README.md"
authors = [{ name = "SurrealDB" }]
license = "Apache-2.0"
keywords = ["SurrealDB", "Database"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.13.4",
    "pydantic-core>=2.0.1",
    "requests>=2.25.0",
    "typing_extensions>=4.0.0; python_version<'3.12'",
    "websockets>=10.0",
]

[project.urls]
homepage = "https://github.com/surrealdb/surrealdb.py"
repository = "https://github.com/surrealdb/surrealdb.py"
documentation = "https://surrealdb.com/docs/sdk/python"

[project.optional-dependencies]
embedded = [
    "surrealdb-embedded==3.0.0-alpha.1",
]
pydantic = [
    "pydantic>=2.12.0",
]

[dependency-groups]
dev = [
    { include-group = "test" },
    "surrealdb[pydantic]",
    "maturin>=1.0",
    "mypy>=1.18.2",
    "pyright>=1.1.407",
    "ruff>=0.14.6",
    "types-requests>=2.32.4",   # Type stubs for requests
]
test = [
    "aioresponses>=0.7.6",
    "coverage>=7.0.0",
    "hypothesis>=6.135.16",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "responses>=0.25.0",
]

# --------------------------------------------------
# uv
# --------------------------------------------------

# aioresponses (test-only) cannot construct aiohttp>=3.14's ClientResponse,
# which now requires a `stream_writer` argument. Cap aiohttp during resolution
# until aioresponses supports 3.14. This is a resolution-only constraint and is
# NOT published in the wheel metadata, so downstream users keep `aiohttp>=3.13.4`.
[tool.uv]
constraint-dependencies = ["aiohttp<3.14"]

[tool.uv.sources]
surrealdb-embedded = { path = "embedded", editable = true }

# --------------------------------------------------
# hatch
# --------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/surrealdb"]

# --------------------------------------------------
# ruff
# --------------------------------------------------

[tool.ruff]
exclude = ["src/surrealdb/__init__.py"]

[tool.ruff.lint]
select = [
    "I",  # isort
    "UP", # pyupgrade
]

# --------------------------------------------------
# mypy
# --------------------------------------------------

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true

# Import discovery
namespace_packages = true
follow_imports = "normal"

# Type checking strictness
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true

# Error reporting
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true

# Incremental mode
incremental = true
cache_dir = ".mypy_cache"

# Platform configuration
python_version = "3.13"

# Third-party library stubs
[[tool.mypy.overrides]]
module = "surrealdb_embedded.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiohttp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "websockets.*"
ignore_missing_imports = true

# Relax type checking for tests - they work with Value union types extensively
[[tool.mypy.overrides]]
module = "tests.*"
# Disable strict type checking for test bodies but keep what we can
disallow_untyped_calls = false
disallow_any_generics = false
# Allow flexible indexing since query() returns Value union type
warn_return_any = false
# Don't warn about type narrowing issues
strict_optional = false
# Error codes the test suite still needs suppressed. The bulk (index,
# union-attr, call-overload, arg-type) come from the public `Value` union that
# query()/CRUD builders return and that tests index into pervasively (~2.1k
# occurrences across ~100 files) - enabling them would require rewriting test
# result handling, not a config change. "operator" was dropped from this list
# because it no longer fires anywhere. Re-enabling the data-flow codes to catch
# public-API regressions is tracked as a dedicated test-typing follow-up.
disable_error_code = [
    "index", "call-overload", "arg-type", "assignment", "return-value",
    "union-attr", "func-returns-value", "name-defined", "misc",
    "comparison-overlap", "str-bytes-safe", "unused-ignore",
    "var-annotated", "no-untyped-def"
]

# --------------------------------------------------
# pyright
# --------------------------------------------------

[tool.pyright]
# Python version
pythonVersion = "3.13"

# Type checking mode
typeCheckingMode = "strict"

# Source configuration
include = ["src"]
extraPaths = ["embedded/src"]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/build",
    "**/dist",
    "**/.mypy_cache",
]

# Strict type checking settings (matching mypy configuration)
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true

# Report settings
reportMissingTypeStubs = false
reportMissingImports = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportTypedDictNotRequiredAccess = false
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = true
reportUntypedNamedTuple = true
reportPrivateUsage = true
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportOverlappingOverload = true
reportMissingSuperCall = false
reportUninitializedInstanceVariable = true
reportInvalidStringEscapeSequence = true
reportUnknownParameterType = true
reportUnknownArgumentType = false
reportUnknownLambdaType = true
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingParameterType = true
reportMissingTypeArgument = true
reportInvalidTypeVarUse = true
reportCallInDefaultInitializer = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportAssertAlwaysTrue = true
reportSelfClsParameterName = true
reportImplicitStringConcatenation = false
reportUndefinedVariable = true
reportUnboundVariable = true
reportInvalidStubStatement = true
reportIncompleteStub = true
reportUnsupportedDunderAll = true
reportUnusedCoroutine = true
reportCallIssue = false
reportAttributeAccessIssue = false
reportArgumentType = false
reportGeneralTypeIssues = false

# --------------------------------------------------
# pytest
# --------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "surrealdb_v3: tests that require a running SurrealDB 3.x server (skipped otherwise)",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# --------------------------------------------------
# coverage
# --------------------------------------------------

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
