[package]
name = "surrealdb-embedded"
version = "3.0.0"
edition = "2021"

[lib]
name = "surrealdb_ext"
path = "src/surrealdb_ext/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py39"] }
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
surrealdb-core = { version = "3", default-features = false, features = ["kv-mem", "kv-surrealkv"] }
surrealdb-types = "3"
tokio = { version = "1", features = ["full"] }
uuid = "1.23"

[profile.release]
lto = true
strip = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1
