[project]
name = "surrealdb-jupyter-examples"
version = "1.0.0"
description = "Jupyter notebook examples for SurrealDB"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.0.0",
    "surrealdb>=1.0.7",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
