[project]
name = "surrealdb-logfire-example"
version = "1.0.0"
description = "Example demonstrating SurrealDB with Pydantic Logfire observability"
requires-python = ">=3.9"
dependencies = [
    "logfire>=1.5.0",
    "python-dotenv>=1.0.0",
    "surrealdb>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
