[project]
name = "surrealdb-quart-example"
version = "1.0.0"
description = "Quart integration example for SurrealDB"
requires-python = ">=3.10"
dependencies = [
    "quart>=0.19.0",
    "quart-cors>=0.7.0",
    "hypercorn>=0.16.0",
    "surrealdb>=1.0.7",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
