[project]
name = "surrealdb-sanic-example"
version = "1.0.0"
description = "Sanic integration example for SurrealDB"
requires-python = ">=3.10"
dependencies = [
    "sanic>=23.12.0",
    "sanic-cors>=2.2.0",
    "surrealdb>=1.0.7",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
